# test_capture

./: CMakeLists.txt  Main.qml  capture.cpp  capture.h  main.cpp  player.cpp  player.h
src/: capture.cpp  capture.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  subwindow.cpp  subwindow.h
